--- a/package.json
+++ b/package.json
@@ -15,5 +15,20 @@
   "bugs": {
     "url": "https://github.com/brittonwalker/merch-tracker/issues"
   },
-  "homepage": "https://github.com/brittonwalker/merch-tracker#readme"
+  "homepage": "https://github.com/brittonwalker/merch-tracker#readme",
+  "dependencies": {
+    "body-parser": "^1.15.2",
+    "express": "^4.14.0",
+    "express-handlebars": "^3.0.0",
+    "jquery": "^3.1.1",
+    "mongodb": "^2.2.10",
+    "mongoose": "^4.6.2"
+  },
+  "devDependencies": {
+    "bootstrap-sass": "^3.3.7",
+    "gulp": "^3.9.1",
+    "gulp-jquery": "^1.1.2",
+    "gulp-nodemon": "^2.2.1",
+    "gulp-sass": "^2.3.2"
+  }
 }
