--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/brittonwalker/merch-tracker#readme",
   "dependencies": {
     "body-parser": "^1.15.2",
+    "bootstrap-datetimepicker-sass": "^3.0.3",
     "express": "^4.14.0",
     "express-handlebars": "^3.0.0",
     "jquery": "^3.1.1",
