--- a/package.json
+++ b/package.json
@@ -28,8 +28,15 @@
   "devDependencies": {
     "bootstrap-sass": "^3.3.7",
     "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.0",
     "gulp-jquery": "^1.1.2",
+    "gulp-jshint": "^2.0.1",
     "gulp-nodemon": "^2.2.1",
-    "gulp-sass": "^2.3.2"
+    "gulp-sass": "^2.3.2",
+    "gulp-strip-debug": "^1.1.0",
+    "gulp-uglify": "^2.0.0",
+    "gulp-util": "^3.0.7",
+    "jshint": "^2.9.3",
+    "jshint-stylish": "^2.2.1"
   }
 }
