--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.14.0",
     "express-handlebars": "^3.0.0",
     "jquery": "^3.1.1",
+    "leaflet": "^1.0.1",
     "mongodb": "^2.2.10",
     "mongoose": "^4.6.2"
   },
